<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conract_number"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etxt_contract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summ_pay"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etxt_summ_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                android:text="@string/payment_methods"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_debit_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_button_main"
                    android:gravity="center"
                    android:text="@string/action_debit_card"
                    android:textStyle="bold" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_yandex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_button"
                    android:gravity="center"
                    android:text="@string/action_yandex_money"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_terminal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_button"
                    android:gravity="center"
                    android:text="@string/action_terminal_code"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_promised"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_button"
                    android:gravity="center"
                    android:text="@string/promised_payment"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
